# asdana

./: .dockerignore  .env.example  .gitattributes  .pylintrc  DEVCONTAINER_QUICKSTART.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  README.md  dev.bat  dev.sh  devcontainer.json  docker-compose.yml  startup.sh
.github/: copilot-instructions.md  pylint.yml
.github/actions/setup/: action.yml
.github/workflows/: black.yml  pylint.yml  pytest.yml  setup-python-poetry.yml
asdana/: __init__.py  basic_bot.py  main.py  test.py
asdana/cogs/config/: __init__.py  config.py
asdana/cogs/dev/: __init__.py  dev.py
asdana/cogs/guild/: __init__.py  guild.py
asdana/cogs/members/: __init__.py  members.py
asdana/cogs/menus/: __init__.py  menu_cleanup.py  menu_handlers.py  reaction_menu.py
asdana/cogs/random/: __init__.py  random.py
asdana/cogs/youtube/: __init__.py  youtube.py
asdana/core/: __init__.py  bot.py  config.py  logging_config.py
asdana/database/: __init__.py  database.py  models.py
asdana/postgres/: connection.py
asdana/utils/: __init__.py  cog_utils.py  menu_factory.py
docs/: REORGANIZATION.md
tests/: conftest.py  helpers.py
tests/cogs/config/: __init__.py  test_config.py
tests/cogs/guild/: test_guild.py
tests/cogs/members/: test_members.py
tests/cogs/menus/: __init__.py  test_menu_cleanup.py  test_menu_handlers.py
tests/cogs/random/: __init__.py  test_random.py
tests/core/: test_bot.py  test_config.py  test_logging_config.py
