[tool.poetry]
name = "Asdana Discord Bot"
version = "0.1.0"
description = "A powerful, highly customizable, and easy-to-use Discord bot."
authors = ["Ash Omaraie <ashkanomaraie@icloud.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
mypy = "^1.13.0"
python-dateutil = "^2.9.0"
psutil = "^6.1.0"

[tool.poetry.group.postgres.dependencies]
asyncpg = "^0.30.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
pylint = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
tomli = "*"
dotenv = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
required-version = "*"
target-version = ["py310"]
include = '\.py$'

[tool.pytest.ini_options]
asyncio_mode = 'auto'